# multi-agent-shogun-tenshukaku

./: .gitignore  README.md  README_ja.md  main.py  pyproject.toml  restart.sh  start.sh
.claude/: settings.json  settings.local.json
.claude/rules/: core.md
.claude/rules/paths/architecture/: api.md  data.md  frontend.md  logging.md  service.md
.claude/rules/paths/core/: style.md  workflow.md
.claude/rules/paths/testing/: benchmark.md  strategies.md
config/: settings.yaml
static/: style.css
templates/: base.html  index.html
templates/partials/: history.html  output.html  status.html
tests/: test_api.py  test_broadcasters.py  test_dashboard_markdown.py  test_dashboard_refresh.py  test_dashboard_table_dark_theme.py  test_delta.py  test_monitor.py  test_sanitize.py  test_tmux_bridge.py  test_ws_core.py  test_ws_endpoints.py
ws/: __init__.py  broadcasters.py  dashboard_cache.py  delta.py  handlers.py  runtime.py  state.py  tmux_bridge.py
